@@ -9,7 +9,7 @@
                 + fvm::div(phi, C, "div(phi,C)")
                 - fvm::laplacian(DeffModel->Deff(), C, "laplacian(Deff,C)")
                 ==
-                R * (SrcInj*Cin)*Winj - (SrcExt*C)*Wext
+                //R * (SrcInj*Cin)*Winj - (SrcExt*C)*Wext
                 - R * theta * fvm::Sp(lambda,C)
             );
 
